2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove useless file.
	* buildnumber.php: Remove.

2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Minor changes.
	* AUTHORS,
	* NEWS,
	* README: Adjust.

2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Minor changes.
	* configure.ac: Aesthetic changes.
	* src/runner/coroutine.cc,
	* src/runner/coroutine.hh: Disable debug traces.
	* src/uconnection.cc: Print debug message only with
	ENABLE_DEBUG_TRACES.

2007-09-09  mefyl  <mefyl@gruntech.net>

	Remove coroutines debug traces.
	* src/console.cc,
	* src/runner/scheduler.cc,
	* src/uconnection.cc: Here.
	* src/runner/runner.hh: Remove trailing whitespace.

2007-09-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Add introspection functions.
	* src/object/atom.hxx: Fix code/primitive printing.
	* src/object/code-class.cc: Send endline after echo.
	* src/object/object-class.cc: Add slotNames, parents, getSlot, setSlot.
	* src/object/object.hh: Add accessor for parents and slots.
	* src/object/object.hxx: Idem.

2007-09-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle run-time URBI errors.
	* src/object/float-class.cc: Primitives now throw errors.
	* src/object/urbi-exception.cc: Fix error format.
	* src/runner/runner.cc: Catch run-time errors.

2007-09-05  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix the test suite.
	* src/object/object-test-primitives.cc: Adjust to match the new
	prototypes (pass a NULL context to float_class_mul and
	float_class_add).
	* tests-local.mk (XFAIL_TESTS): Adjust (sort and add
	parse-errors.chk since a k2-specific version of this test will be
	added).

2007-09-04  mefyl  <mefyl@lrde.epita.fr>

	Add list insertion functions.
	* src/object/atom.hh,
	* src/object/atom.hxx: Add a non-const accessor to the held value.
	* src/object/primitives.hh: Add macro for primitive taking objects
        as argument.
	* src/object/list-class.cc,
	* src/object/list-class.hh: Add insertion function.
