@@ -5,8 +5,6 @@
 //#define ENABLE_DEBUG_TRACES
 #include "libport/compiler.hh"
 
-#include <boost/foreach.hpp>
-
 #include "kernel/uconnection.hh"
 #include "object/atom.hh"
 #include "object/urbi-exception.hh"
